fix: rearrange navbar items on mobile & fix footer to bottom

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,10 +6,15 @@
 }
 
 /* General Styles */
+
+html {
+    height: 100%;
+}
+
 body {
     background-color: #FAF9F6;
     font-family: "Poppins", sans-serif;
-    height: 100%;
+    min-height: 100vh;
 }
 
 .frame {
